fix: adjust icons to render only if icon exist

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", ".turbo"],
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2015",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
