--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "name": "design-system-senai-react",
-    "version": "1.0.3",
+    "version": "1.0.6",
     "scripts": {
         "dev": "rollup -c --watch",
-        "build": "rollup -c"
+        "build": "rollup -c",
+        "changeset": "changeset",
+        "version-packages": "changeset version"
     },
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
@@ -19,10 +21,11 @@
         "clsx": "^2.1.1"
     },
     "devDependencies": {
-        "@rollup/plugin-image": "^3.0.3",
-        "@rollup/plugin-terser": "^0.4.4",
+        "@changesets/cli": "^2.27.1",
         "@rollup/plugin-commonjs": "^21.0.2",
+        "@rollup/plugin-image": "^3.0.3",
         "@rollup/plugin-node-resolve": "^13.1.3",
+        "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^8.3.3",
         "@types/react": "^18.3.12",
         "@vanilla-extract/rollup-plugin": "^1.3.10",
