--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "dist"
     ],
     "peerDependencies": {
-        "react": "^18.0.0 || ^19.0.0"
+        "react": "^18.0.0 || ^19.0.0",
+        "react-dom": "^18.0.0 || ^19.0.0"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
@@ -28,6 +29,7 @@
         "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^8.3.3",
         "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.0.0 || ^19.0.0",
         "@vanilla-extract/rollup-plugin": "^1.3.10",
         "eslint": "^8",
         "eslint-config-prettier": "^9.1.0",
