--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@rollup/plugin-node-resolve": "^13.1.3",
         "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^8.3.3",
+        "@types/dom-speech-recognition": "^0.0.4",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.0.0 || ^19.0.0",
         "@vanilla-extract/rollup-plugin": "^1.3.10",
