--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dependencies": {
         "@headlessui/react": "^2.2.0",
         "@vanilla-extract/css": "^1.16.0",
-        "clsx": "^2.1.1"
+        "clsx": "^2.1.1",
+        "dayjs": "^1.11.13"
     },
     "devDependencies": {
         "@changesets/cli": "^2.27.1",
