--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "dependencies": {
         "@headlessui/react": "^2.2.0",
         "@vanilla-extract/css": "^1.16.0",
+        "@wavesurfer/react": "^1.0.7",
         "clsx": "^2.1.1",
-        "dayjs": "^1.11.13"
+        "dayjs": "^1.11.13",
+        "wavesurfer.js": "^7.8.11"
     },
     "devDependencies": {
         "@changesets/cli": "^2.27.1",
