--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "design-system-senai-react",
-    "version": "1.0.26",
+    "version": "1.0.27",
     "scripts": {
         "dev": "rollup -c --watch",
         "build": "rollup -c",
@@ -17,7 +17,7 @@
         "react-dom": "^18.0.0 || ^19.0.0"
     },
     "dependencies": {
-        "@headlessui/react": "^2.2.0",
+        "@headlessui/react": "2.2.0",
         "@vanilla-extract/css": "^1.16.0",
         "@wavesurfer/react": "^1.0.7",
         "clsx": "^2.1.1",
