--- a/package.json
+++ b/package.json
@@ -1,48 +1,63 @@
 {
-    "name": "design-system-senai-react",
-    "version": "1.0.40",
-    "scripts": {
-        "dev": "rollup -c --watch",
-        "build": "rollup -c",
-        "changeset": "changeset",
-        "version-packages": "changeset version"
-    },
-    "main": "dist/cjs/index.js",
-    "module": "dist/esm/index.js",
-    "files": [
-        "dist"
-    ],
-    "peerDependencies": {
-        "react": "^18.0.0 || ^19.0.0",
-        "react-dom": "^18.0.0 || ^19.0.0"
-    },
-    "dependencies": {
-        "@headlessui/react": "2.2.0",
-        "@vanilla-extract/css": "^1.16.0",
-        "@wavesurfer/react": "^1.0.7",
-        "clsx": "^2.1.1",
-        "dayjs": "^1.11.13",
-        "react-select": "^5.9.0",
-        "wavesurfer.js": "^7.8.11"
-    },
-    "devDependencies": {
-        "@changesets/cli": "^2.27.1",
-        "@rollup/plugin-commonjs": "^21.0.2",
-        "@rollup/plugin-image": "^3.0.3",
-        "@rollup/plugin-node-resolve": "^13.1.3",
-        "@rollup/plugin-terser": "^0.4.4",
-        "@rollup/plugin-typescript": "^8.3.3",
-        "@types/dom-speech-recognition": "^0.0.4",
-        "@types/react": "^18.3.12",
-        "@types/react-dom": "^18.0.0 || ^19.0.0",
-        "@vanilla-extract/rollup-plugin": "^1.3.10",
-        "eslint": "^8",
-        "eslint-config-prettier": "^9.1.0",
-        "prettier": "^3.2.5",
-        "rollup": "^2.70.1",
-        "rollup-plugin-dts": "^4.2.0",
-        "rollup-plugin-peer-deps-external": "^2.2.4",
-        "rollup-plugin-postcss": "^4.0.2",
-        "typescript": "^5.6.3"
-    }
+  "name": "design-system-senai-react",
+  "version": "1.0.40",
+  "scripts": {
+    "dev": "rollup -c --watch",
+    "build": "rollup -c",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "peerDependencies": {
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
+  },
+  "dependencies": {
+    "@headlessui/react": "2.2.0",
+    "@vanilla-extract/css": "^1.16.0",
+    "@wavesurfer/react": "^1.0.7",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "react-select": "^5.9.0",
+    "wavesurfer.js": "^7.8.11"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.27.1",
+    "@chromatic-com/storybook": "3.2.4",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-image": "^3.0.3",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "@storybook/addon-essentials": "8.5.3",
+    "@storybook/addon-interactions": "8.5.3",
+    "@storybook/addon-onboarding": "8.5.3",
+    "@storybook/addon-webpack5-compiler-swc": "2.0.0",
+    "@storybook/blocks": "8.5.3",
+    "@storybook/react": "8.5.3",
+    "@storybook/react-webpack5": "8.5.3",
+    "@storybook/test": "8.5.3",
+    "@types/dom-speech-recognition": "^0.0.4",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.0.0 || ^19.0.0",
+    "@vanilla-extract/rollup-plugin": "^1.3.10",
+    "@vanilla-extract/webpack-plugin": "^2.3.17",
+    "eslint": "^8",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-storybook": "^0.11.2",
+    "mini-css-extract-plugin": "^2.9.2",
+    "prettier": "^3.2.5",
+    "rollup": "^2.70.1",
+    "rollup-plugin-dts": "^4.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "storybook": "8.5.3",
+    "typescript": "^5.6.3"
+  }
 }
