--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", ".turbo"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    ".turbo",
+    "src/**/*.stories.tsx",
+    "src/**/*.stories.ts"
+  ],
   "compilerOptions": {
     "target": "ES2020",
     "esModuleInterop": true,
