--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@wavesurfer/react": "^1.0.7",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "react-markdown": "^10.1.0",
     "react-select": "^5.9.0",
     "wavesurfer.js": "^7.8.11"
   },
