--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "design-system-senai-react",
-  "version": "1.0.54",
+  "version": "1.0.55",
   "scripts": {
     "dev": "rollup -c --watch",
     "build": "rollup -c",
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.13",
     "react-markdown": "^10.1.0",
     "react-select": "^5.9.0",
+    "remark-gfm": "^4.0.1",
     "wavesurfer.js": "^7.8.11"
   },
   "devDependencies": {
