--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "design-system-senai-react",
-  "version": "1.0.105",
+  "version": "1.0.106",
   "scripts": {
     "dev": "rollup -c --watch",
     "build": "rollup -c",
@@ -28,6 +28,7 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-markdown": "^10.1.0",
     "react-select": "^5.9.0",
+    "recharts": "^3.0.0",
     "remark-gfm": "^4.0.1",
     "wavesurfer.js": "^7.8.11"
   },
